# ProjectFlow

./: .env.example  .gitignore  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  CHANGELOG.md  CHANGELOG_FIX.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  EXAMPLES.md  FINAL_SUMMARY.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  QUICK_DEPLOY_AZURE.md  README.md  THEME_SETTER_GUIDE.md  USAGE_GUIDE.md  WEB_DEPLOYMENT.md  api_server.py  background_tool.py  config.py  demo_api_usage.py  deploy.sh  docker-compose.yml  group_manager.py  models.py  projectflow_graph.py  projectflow_web.py  pyproject.toml  requirements.txt  start_api.bat  start_student.bat  start_teacher.bat  start_web.bat  startup.sh  student_interface.py  teacher_analysis_agent.py  (+10 more)
.azure/: config.md
.github/workflows/: main_projectflow.yml
dev_env_docker/: dockerfile
prompts/: __init__.py  doc_struct.py  stage_setting.yaml  theme_config_example.yaml
