[project]
name = "projectflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi==0.116.1",
    "gradio>=5.50.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-core==0.3.74",
    "langchain-google-vertexai>=2.0.28",
    "langchain-openai==0.3.30",
    "langchain-text-splitters==0.3.9",
    "langgraph==0.6.5",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.2",
    "langsmith==0.4.14",
    "openai==1.100.1",
    "orjson==3.11.2",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "PyYAML==6.0.2",
    "regex==2025.7.34",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "starlette==0.47.2",
    "tenacity==9.1.2",
    "tiktoken==0.11.0",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "xxhash==3.5.0",
    "zstandard==0.24.0",
]
